--- a/Draw/ZhaJinHua/View/MoneyTreeView.xib
+++ b/Draw/ZhaJinHua/View/MoneyTreeView.xib
@@ -39,13 +39,14 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIView" id="657232119">
 						<reference key="NSNextResponder" ref="840940229"/>
-						<int key="NSvFlags">274</int>
+						<int key="NSvFlags">319</int>
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="712273025">
 								<reference key="NSNextResponder" ref="657232119"/>
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{-7, -7}, {106, 78}}</string>
 								<reference key="NSSuperview" ref="657232119"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="136555037"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -53,9 +54,10 @@
 							</object>
 							<object class="IBUILabel" id="46524347">
 								<reference key="NSNextResponder" ref="657232119"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{25, 25}, {42, 21}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{0, 20}, {93, 38}}</string>
 								<reference key="NSSuperview" ref="657232119"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -70,43 +72,44 @@
 								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<int key="IBUINumberOfLines">3</int>
+								<int key="IBUITextAlignment">1</int>
+								<int key="IBUILineBreakMode">0</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">17</double>
+									<double key="pointSize">9</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">17</double>
+									<double key="NSSize">9</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<double key="preferredMaxLayoutWidth">93</double>
 							</object>
 						</array>
 						<string key="NSFrame">{{40, 5}, {93, 71}}</string>
 						<reference key="NSSuperview" ref="840940229"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="712273025"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
+						<object class="NSColor" key="IBUIBackgroundColor" id="247927424">
 							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace" id="716989946">
-								<int key="NSID">2</int>
-							</object>
+							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 					<object class="IBUIButton" id="136555037">
 						<reference key="NSNextResponder" ref="840940229"/>
-						<int key="NSvFlags">292</int>
+						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{9, 84}, {57, 60}}</string>
 						<reference key="NSSuperview" ref="840940229"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<int key="IBUIButtonType">1</int>
-						<string key="IBUINormalTitle">Button</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -130,15 +133,12 @@
 						</object>
 					</object>
 				</array>
-				<string key="NSFrameSize">{140, 151}</string>
+				<string key="NSFrameSize">{141, 150}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="657232119"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="716989946"/>
-				</object>
+				<reference key="IBUIBackgroundColor" ref="247927424"/>
 				<object class="IBUISimulatedSizeMetrics" key="IBUISimulatedDestinationMetrics">
 					<string key="IBUISimulatedSizeMetricsClass">IBUISimulatedFreeformSizeMetricsSentinel</string>
 					<string key="IBUIDisplayName">Freeform</string>
@@ -213,8 +213,8 @@
 						<int key="objectID">4</int>
 						<reference key="object" ref="657232119"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="712273025"/>
 							<reference ref="46524347"/>
+							<reference ref="712273025"/>
 						</array>
 						<reference key="parent" ref="840940229"/>
 					</object>
@@ -253,7 +253,50 @@
 			<nil key="sourceID"/>
 			<int key="maxID">21</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">MoneyTree</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MoneyTree.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">MoneyTreeView</string>
+					<string key="superclassName">UIView</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="moneyTree">MoneyTree</string>
+						<string key="popMessageBackgroundImageView">UIImageView</string>
+						<string key="popMessageBody">UIView</string>
+						<string key="popMessageLabel">UILabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="moneyTree">
+							<string key="name">moneyTree</string>
+							<string key="candidateClassName">MoneyTree</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="popMessageBackgroundImageView">
+							<string key="name">popMessageBackgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="popMessageBody">
+							<string key="name">popMessageBody</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="popMessageLabel">
+							<string key="name">popMessageLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MoneyTreeView.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
