--- a/Draw/ZhaJinHua/Controller/ZJHGameController~ipad.xib
+++ b/Draw/ZhaJinHua/Controller/ZJHGameController~ipad.xib
@@ -230,7 +230,7 @@
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">屌丝的房间</string>
+						<string key="IBUIText"/>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC40NTA5ODAzOTIyIDAuMjgyMzUyOTQxMiAwLjA1NDkwMTk2MDc4AA</bytes>
@@ -482,11 +482,11 @@
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="510069865">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="965819205">
 							<int key="type">2</int>
 							<double key="pointSize">22</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="311561611">
+						<object class="NSFont" key="IBUIFont" id="144705070">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">22</double>
 							<int key="NSfFlags">16</int>
@@ -539,8 +539,8 @@
 						<string key="IBUIShadowOffset">{0, 1}</string>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
-						<reference key="IBUIFontDescription" ref="510069865"/>
-						<reference key="IBUIFont" ref="311561611"/>
+						<reference key="IBUIFontDescription" ref="965819205"/>
+						<reference key="IBUIFont" ref="144705070"/>
 					</object>
 					<object class="IBUIView" id="194040692">
 						<reference key="NSNextResponder" ref="483638841"/>
@@ -597,17 +597,17 @@
 						<int key="IBUITag">2000</int>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIImageView" id="126072822">
+					<object class="IBUIImageView" id="525075193">
 						<reference key="NSNextResponder" ref="483638841"/>
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{511, 681}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="483638841"/>
-						<reference key="NSNextKeyView" ref="110416421"/>
+						<reference key="NSNextKeyView" ref="170708840"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUILabel" id="110416421">
+					<object class="IBUILabel" id="170708840">
 						<reference key="NSNextResponder" ref="483638841"/>
 						<int key="NSvFlags">-2147483356</int>
 						<string key="NSFrame">{{511, 681}, {50, 50}}</string>
@@ -646,7 +646,7 @@
 						<int key="NSvFlags">-2147483347</int>
 						<string key="NSFrame">{{503, 726}, {100, 35}}</string>
 						<reference key="NSSuperview" ref="483638841"/>
-						<reference key="NSNextKeyView" ref="126072822"/>
+						<reference key="NSNextKeyView" ref="525075193"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="IBUITag">3000</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -1054,7 +1054,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">cardTypeLabel</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="110416421"/>
+						<reference key="destination" ref="170708840"/>
 					</object>
 					<int key="connectionID">3893</int>
 				</object>
@@ -1070,7 +1070,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">cardTypeBgImageView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="126072822"/>
+						<reference key="destination" ref="525075193"/>
 					</object>
 					<int key="connectionID">3896</int>
 				</object>
@@ -1250,8 +1250,8 @@
 							<reference ref="241251516"/>
 							<reference ref="107431730"/>
 							<reference ref="316893186"/>
-							<reference ref="110416421"/>
-							<reference ref="126072822"/>
+							<reference ref="170708840"/>
+							<reference ref="525075193"/>
 							<reference ref="916225450"/>
 						</array>
 						<reference key="parent" ref="0"/>
@@ -1490,12 +1490,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3892</int>
-						<reference key="object" ref="110416421"/>
+						<reference key="object" ref="170708840"/>
 						<reference key="parent" ref="483638841"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3895</int>
-						<reference key="object" ref="126072822"/>
+						<reference key="object" ref="525075193"/>
 						<reference key="parent" ref="483638841"/>
 					</object>
 				</array>
